--- a/index_1.html
+++ b/index_1.html
@@ -72,7 +72,7 @@
 			</li>
 			<li class="mm-menu__item">
 			  <a class="mm-menu__link" href="#">
-				<span class="mm-menu__link-text"><i class="fa fa-wrench text-default"></i> rate a local clinic (10%)</span>
+				<span class="mm-menu__link-text"><i class="fa fa-map-marker text-default"></i> rate a local clinic (10%)</span>
 			  </a>
 			</li>
 			<li class="mm-menu__item">
@@ -110,7 +110,7 @@
 			</div>
 			<div data-thumb="images/slider-4-thumb.jpg" data-src="images/slider-4.jpg">
 				<div class="camera_caption fadeFromBottom">
-					and <em> <i class="fa fa-wrench text-default"></i> retool 1<i class="fa fa-smile-o text-default"></i> Boda Boda motorcycles into BBAs (Boda Boda Ambulances)</em> 
+					and <em> <i class="fa fa-map-marker text-default"></i> retool 1<i class="fa fa-smile-o text-default"></i> Boda Boda motorcycles into BBAs (Boda Boda Ambulances)</em> 
 				</div>
 			</div>
 			<div data-thumb="images/slider-5-thumb.jpg" data-src="images/slider-5.jpg">
@@ -179,7 +179,7 @@
 		
 		
 		<!-- care SPACES. SITES. LifeSaver Target: 1mn smiles. synergies, stories, sites-->
-		<li><a href="4.html" target="_blank"><i class="fa fa-wrench fa-2x text-default"></i></a>
+		<li><a href="4.html" target="_blank"><i class="fa fa-map-marker fa-2x text-default"></i></a>
 		  <ol>
 			<li><a href="#"><i class="fa fa-medkit fa-2x text-default"></i></a></li>
 			<li><a href="#"><i class="fa fa-hospital-o fa-2x text-default"></i></a></li>
@@ -304,11 +304,16 @@
 						<ul class="social-buttons">
 							<li><a href="#smiles"><i class="fa fa-bullseye fa-2x"></i> Join 1,000,000 smiles epidemic</a>
 							</li>
-							<li><a href="https://www.appsheet.com/newshortcut/cec10aea-9850-41a7-9696-fb67d6ea7981" target="_blank"><i class="fa fa-android fa-2x"></i> Blackspot Detective (Download Mobile app)</a></li>
-							<li><a href="https://www.appsheet.com/start/cec10aea-9850-41a7-9696-fb67d6ea7981" target="_blank" ><i class="fa fa-desktop fa-2x"></i> Browse Web App</a>
+							<li><a href="https://www.appsheet.com/newshortcut/cec10aea-9850-41a7-9696-fb67d6ea7981"><i class="fa fa-android fa-2x"></i> Blackspot Detective (Download Mobile app)</a></li>
+							<li><a href="https://www.appsheet.com/start/cec10aea-9850-41a7-9696-fb67d6ea7981"><i class="fa fa-desktop fa-2x"></i> Browse Web App</a>
 							</li>
 							
-							<li><a href="#"><i class="fa fa-bar-chart-o"></i> 10 minutes response </a>
+							
+							<li><a href="#portfolio"> <i class="fa fa-heartbeat"></i> 1,000 care synergies</a>
+							</li>
+							<li><a href="#"><i class="fa fa-lightbulb-o"></i> 100 Boda boda ambulances</a>
+							</li>
+							<li><a href="#"><i class="fa fa-trophy"></i> 10 minutes response </a>
 							</li>
 							<li><a href="#deaths"><i class="fa fa-frown-o"></i> Boda boda deaths</a>
 							</li>
@@ -631,35 +636,43 @@
                         "icon":"<i class='fa fa-smile-o'></i>"
                     },
                     {
-                        "title":"share: volunteer at C-Corp",
-						"url":"http://localhost/1smile.org/app",
-                        "bgcolor":"red",
-                        "color":"white",
-                        "icon":"<i class='fa fa-heartbeat'></i>",
-                        "target":"_blank"
-                    },
-                    {
-                        "title":"care: report blackspot",
-						"url":"http://localhost/1smile.org/app",
-                        "bgcolor":"green",
-                        "color":"white",
-                        "icon":"<i class='fa fa-lightbulb-o'></i>",
-                        "target":"_blank"
-                    },
-                    {
-                        "title":"dare: learn first aid",
-						"url":"http://localhost/1smile.org/app",
-                        "bgcolor":"blue",
-                        "color":"white",
-                        "icon":"<i class='fa fa-wrench'></i>",
-                        "target":"_blank"
-                    },
-                    {
-                        "title":"join 1mn smiles campaign",
-						"url":"http://localhost/1smile.org/app",
+                        "title":"sign in with LinkedIn",
+						"url":"http://www.sci-gaia.eu",
                         "bgcolor":"purple",
                         "color":"white",
-                        "icon":"<i class='fa fa-smile-o'></i>",
+                        "icon":"<i class='fa fa-linkedin-square'></i>",
+                        "target":"_blank"
+                    },
+                    {
+                        "title":"sign in with Twitter",
+						"url":"http://www.sci-gaia.eu",
+                        "bgcolor":"purple",
+                        "color":"white",
+                        "icon":"<i class='fa fa-twitter'></i>",
+                        "target":"_blank"
+                    },
+                    {
+                        "title":"sign in with Facebook",
+						"url":"http://www.sci-gaia.eu",
+                        "bgcolor":"purple",
+                        "color":"white",
+                        "icon":"<i class='fa fa-facebook-square'></i>",
+                        "target":"_blank"
+                    },
+                    {
+                        "title":"sign in with Work Email",
+						"url":"http://www.sci-gaia.eu",
+                        "bgcolor":"purple",
+                        "color":"white",
+                        "icon":"<i class='fa fa-envelope'></i>",
+                        "target":"_blank"
+                    },
+                    {
+                        "title":"sign in with Google+",
+						"url":"http://www.sci-gaia.eu",
+                        "bgcolor":"purple",
+                        "color":"white",
+                        "icon":"<i class='fa fa-google-plus-square'></i>",
                         "target":"_blank"
                     }
                 ]
